--- a/html/mx.html
+++ b/html/mx.html
@@ -13,7 +13,6 @@
 
 <body>
     <div class="background">
-
         <div class="content">
             <header></header>
             <img src="img/rappiCardMX.png" srcset="img/rappiCardMX@2x.png 2x,
@@ -26,7 +25,6 @@
             <img src="img/felicidades-rappicard-aprobada-1.png" srcset="img/felicidades-rappicard-aprobada-1@2x.png 2x,
                 img/felicidades-rappicard-aprobada-1@3x.png 3x" class="felicidades-rappicard-aprobada-1">
         </div>
-
     </div>
     <div class="information">
         <div class="dataConfirmation">
@@ -121,7 +119,7 @@
         <img class="plano-general-MX-PE" src="img/plano-general-MX.png" alt="">
     </div>
     <footer>
-        <div class="background-footer">
+        <div class="background">
             <div class="content">
                 <div class="text-footer">
                     <label class="thanks">
@@ -298,8 +296,7 @@
     }
 
     .background-footer {
-        width: 699px;
-        height: 335px;
+
         flex-grow: 0;
         margin: 65px 0 0;
         background-color: #000;
@@ -437,8 +434,6 @@
     }
 
     body {
-        width: 699px;
-        height: 1416px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -449,7 +444,6 @@
 
 
     .background {
-        width: 699px;
         height: 284px;
         flex-grow: 0;
         margin: 0 0 96px;
@@ -501,7 +495,6 @@
     }
 
     .content {
-        width: 560px;
         height: 340px;
         flex-grow: 0;
         display: flex;
