--- a/html/mx.html
+++ b/html/mx.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="background">
+    <div class="background margin-bottom-96">
         <div class="content">
             <header></header>
             <img src="img/rappiCardMX.png" srcset="img/rappiCardMX@2x.png 2x,
@@ -100,7 +100,6 @@
     </div>
     <div class="mensaje">
         <div class="Frame-1000000852">
-
             <div class="image-heart">
                 <img class="corazon-1-1" src="img/corazon1.png">
             </div>
@@ -120,7 +119,7 @@
     </div>
     <footer>
         <div class="background">
-            <div class="content">
+            <div class="content-footer">
                 <div class="text-footer">
                     <label class="thanks">
                         ¡Gracias!
@@ -134,12 +133,12 @@
                         </label>
                     </div>
                     <div class="Social-Media">
-                        <svg width="11" height="22" viewBox="0 0 11 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="social-logo" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M8.59148 4.06348H10.4972V0.813956C10.1796 0.75024 9.03616 0.686523 7.76565 0.686523C4.97052 0.686523 3.12828 2.34315 3.12828 5.52896V8.39619H0.142578V12.0917H3.12828V21.3306H6.81276V12.0917H9.67141L10.1161 8.39619H6.81276V5.84754C6.81276 4.82808 7.06686 4.06348 8.59148 4.06348Z"
                                 fill="white" />
                         </svg>
-                        <svg width="20" height="22" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="social-logo" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8006 6.25385C19.7403 5.15274 19.5593 4.37548 19.318 3.72777C19.0766 3.01529 18.7146 2.36758 18.1716 1.84941C17.6889 1.33124 17.0855 0.87784 16.4218 0.618755C15.8185 0.359671 15.0945 0.165357 14.0688 0.100586C13.0431 0.100586 12.7414 0.100586 10.0866 0.100586C7.43187 0.100586 7.13019 0.100586 6.04415 0.165357C5.01845 0.230128 4.29443 0.424442 3.69108 0.683526C3.02739 0.942611 2.42403 1.33124 1.94135 1.91418C1.45866 2.43235 1.03631 3.08006 0.794973 3.79254C0.553631 4.44025 0.372623 5.21751 0.312288 6.31862C0.251952 7.41973 0.251953 7.80835 0.251953 10.6583C0.251953 13.5082 0.251952 13.8321 0.312288 14.998C0.372623 16.0991 0.553631 16.8763 0.794973 17.524C1.03631 18.2365 1.45866 18.8842 1.94135 19.4024C2.42403 19.9206 3.02739 20.374 3.69108 20.633C4.29443 20.8921 5.01845 21.0864 6.04415 21.1512C7.06986 21.216 7.43187 21.216 10.0866 21.216C12.7414 21.216 13.0431 21.216 14.1291 21.1512C15.1548 21.0864 15.8788 20.8921 16.4822 20.633C17.8096 20.1149 18.8353 18.949 19.318 17.5888C19.5593 16.9411 19.7403 16.1638 19.8006 15.0627C19.861 13.9616 19.861 13.573 19.861 10.7231C19.861 7.87312 19.8006 7.41973 19.8006 6.25385ZM17.9906 14.8036C17.9302 15.84 17.8096 16.3581 17.6286 16.7468C17.3269 17.6536 16.6029 18.3661 15.7582 18.7547C15.3962 18.8842 14.9135 19.0785 13.9481 19.1433C12.9224 19.2081 12.6207 19.2081 10.0263 19.2081C7.43187 19.2081 7.1302 19.2081 6.10449 19.1433C5.13913 19.0785 4.65644 18.949 4.29443 18.7547C3.87208 18.5604 3.51007 18.3013 3.14806 17.9774C2.84638 17.6536 2.60503 17.2002 2.42403 16.7468C2.30336 16.3581 2.12235 15.84 2.06202 14.8036C2.00168 13.7025 2.00168 13.3787 2.00168 10.5935C2.00168 7.80835 2.00168 7.4845 2.06202 6.38339C2.12235 5.34705 2.24302 4.82888 2.42403 4.44025C2.60503 3.98685 2.84638 3.59823 3.14806 3.2096C3.44973 2.88575 3.87208 2.62666 4.29443 2.43235C4.65644 2.30281 5.13913 2.10849 6.10449 2.04372C7.1302 1.97895 7.43187 1.97895 10.0263 1.97895C12.6207 1.97895 12.9224 1.97895 13.9481 2.04372C14.9135 2.10849 15.3962 2.23803 15.7582 2.43235C16.1805 2.62666 16.5425 2.88575 16.9045 3.2096C17.2062 3.53346 17.4476 3.98685 17.6286 4.44025C17.7492 4.82888 17.9302 5.34705 17.9906 6.38339C18.0509 7.4845 18.0509 7.80835 18.0509 10.5935C18.0509 13.3787 18.0509 13.7025 17.9906 14.8036Z"
                                 fill="white" />
@@ -150,7 +149,7 @@
                                 d="M16.4822 4.96022C16.4822 5.67275 15.9392 6.19095 15.3358 6.19095C14.6721 6.19095 14.1895 5.60797 14.1895 4.96022C14.1895 4.24769 14.7325 3.72949 15.3358 3.72949C15.9392 3.72949 16.4822 4.31247 16.4822 4.96022Z"
                                 fill="white" />
                         </svg>
-                        <svg width="20" height="18" viewBox="0 0 20 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="social-logo" viewBox="0 0 20 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M19.8653 2.96005C19.1413 3.28391 18.3569 3.54299 17.5725 3.67254C18.4172 3.15437 19.0206 2.31234 19.3223 1.276C18.5379 1.79417 17.6932 2.11803 16.7882 2.31234C16.0642 1.47032 14.9781 0.952148 13.8318 0.952148C11.5993 0.952148 9.84961 2.89528 9.84961 5.29182C9.84961 5.61567 9.84961 5.93953 9.97028 6.26338C6.65183 6.06907 3.6954 4.38502 1.70433 1.7294C1.34232 2.37711 1.16132 3.0896 1.16132 3.93162C1.16132 5.42136 1.88534 6.71678 2.97138 7.49404C2.30769 7.49404 1.70433 7.29972 1.16132 6.97587C1.16132 6.97587 1.16132 6.97587 1.16132 7.04064C1.16132 9.11331 2.54903 10.8621 4.35909 11.2508C4.05742 11.3155 3.6954 11.3803 3.33338 11.3803C3.09204 11.3803 2.79037 11.3803 2.54903 11.3155C3.09205 12.9996 4.5401 14.295 6.28983 14.295C4.90211 15.4609 3.21272 16.1086 1.34232 16.1086C1.04065 16.1086 0.67863 16.1086 0.376953 16.0438C2.12668 17.2745 4.23842 17.987 6.53116 17.987C13.8921 17.987 17.9346 11.4451 17.9346 5.74521C17.9346 5.5509 17.9346 5.35659 17.9346 5.16227C18.6586 4.57933 19.3223 3.86685 19.8653 2.96005Z"
                                 fill="white" />
@@ -168,6 +167,13 @@
 </body>
 
 <style>
+    .social-logo {
+        align-items: center;
+        margin: 0 20px 0 20px;
+        width: 20px;
+        height: 22px;
+    }
+
     .Frame-1000000852 {
         flex-grow: 0;
         display: flex;
@@ -177,7 +183,7 @@
     }
 
     .label-future-card {
-        height: 54px;
+        margin: 15px;
         flex-grow: 1;
         font-family: Poppins;
         font-size: 14px;
@@ -237,10 +243,8 @@
     }
 
     .Social-Media {
-        width: 150.7px;
-        height: 22.2px;
+        align-self: center;
         flex-grow: 0;
-        padding: 0 0px 0 0;
     }
 
     label.doubt {
@@ -295,13 +299,6 @@
         color: #fff;
     }
 
-    .background-footer {
-
-        flex-grow: 0;
-        margin: 65px 0 0;
-        background-color: #000;
-    }
-
     label.thanks {
         height: 28px;
         align-self: stretch;
@@ -324,14 +321,11 @@
     }
 
     .content-footer {
-        width: 658px;
-        height: 326.3px;
         flex-grow: 0;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
-        gap: 24px;
         margin: 0 20.5px 73.7px 20.5px;
         padding: 0;
     }
@@ -442,11 +436,14 @@
         padding: 0;
     }
 
+    .margin-bottom-96 {
+        margin: 0 0 96px;
+    }
 
     .background {
+        align-self: stretch;
         height: 284px;
         flex-grow: 0;
-        margin: 0 0 96px;
         background-color: #000;
     }
 
@@ -470,7 +467,7 @@
     }
 
     .title {
-        width: 560px;
+        /* width: 560px; */
         height: 112px;
         flex-grow: 0;
         display: flex;
